--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Liga de Futbol, Galeria de Fotos, Niños, Chicos, Equipos de futbol, Futbol, Amigos, Fotos">
-    <meta name="description" content="galeria de fotos de algunos equipos que compiten en la liga de futbol">
-    <!-- logo -->
-    <link rel="shortcut icon" href="../imagenes/favicon.ico" type="image/x-icon">
-<!-- GOOGLE FONTS -->
-    <enlace rel="preconectar" href="https://fonts.googleapis.com">
-    <enlace rel="preconectar" href="https://fonts.gstatic.com" crossorigin>
-    <enlace href="https: //fonts.googleapis.com/css2? family= Tiro+Telugu & display=swap" rel="hoja de estilo">
-<!-- NOMBRE DE LA PAGINA -->
-    <title> LIGA DE FUTBOL- Galeria</title>
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-<!-- ETIQUETA CSS -->
-    <link rel="stylesheet" href="../css/styles.css"> 
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- SEO keywords -->
+        <meta name="keywords" content="Liga de Futbol, Galeria de Fotos, Niños, Chicos, Equipos de futbol, Futbol, Amigos, Fotos">
+        <!-- SEO description-->
+        <meta name="description" content="galeria de fotos de algunos equipos que compiten en la liga de futbol">
+        <!-- logo -->
+        <link rel="shortcut icon" href="../imagenes/favicon.ico" type="image/x-icon">
+    <!-- GOOGLE FONTS -->
+        <enlace rel="preconectar" href="https://fonts.googleapis.com">
+        <enlace rel="preconectar" href="https://fonts.gstatic.com" crossorigin>
+        <enlace href="https: //fonts.googleapis.com/css2? family= Tiro+Telugu & display=swap" rel="hoja de estilo">
+    <!-- NOMBRE DE LA PAGINA -->
+        <title> LIGA DE FUTBOL- Galeria</title>
+        <!-- CSS only -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- ETIQUETA CSS -->
+        <link rel="stylesheet" href="../css/styles.css"> 
+    </head>
 <body>
 <!-- encabezado de la pagina -->
     <header>
@@ -63,46 +65,47 @@
         
     </main>
 <!-- pie de pagina -->
-<footer class=" text-lg-center text-white footer__texto pt-0" style="background-color: #1c2331">
-    <section>
-    <div class="container text-center text-md-start">
-    <div class="row d-flex justify-content-center m-0">
-    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-    <h6 class="text-uppercase fw-bold">Paginas</h6>
-        <p>
-            <a href="../index.html" class="text-white">Inicio</a>
-        </p>
-        <p>
-            <a href="../paginas/quienes-somos.html" class="text-white">Quienes Somos</a>
-        </p>
-        <p>
-            <a href="../paginas/galeria.html" class="text-white">Galeria</a>
-        </p>
-        <p>
-            <a href="../paginas/formato.html" class="text-white">Formato</a>
-        </p>
-        <p>
-            <a href="../paginas/contacto.html" class="text-white">Contacto</a>
-        </p>
-    </div>
-    <div class="col-md-2 col-md-4 col-xl-2 mx-auto mt-3">
-    <h6 class="text-uppercase fw-bold">Contacto</h6>
-        <p><i class="fas fa-home mr-3"></i> Yerba Buena, Tucuman, AR</p>
-        <p><i class="fas fa-home mr-3 pp"></i> Torneofutbol@gmail.com</p>
-        <p><i class="fas fa-home mr-3"></i> + 01 234 567 88 </p>
-        <p><i class="fas fa-home mr-3"></i> + 01 234 567 99</p>
-    </div>
-    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-    <h6 class="text-uppercase fw-bold">Redes</h6>
-        <div class="d-flex flex-column footer__indice">
-            <img class="footer__logos" src="../imagenes/facebook.png" alt="imagen-facebook">
-            <img class="footer__logos" src="../imagenes/instagram.png" alt="imagen-instagram">
-            <img class="footer__logos" src="../imagenes/gorjeo.png" alt="imagen-twitter">
+    <footer class=" text-lg-center text-white footer__texto pt-0" style="background-color: #1c2331">
+        <section>
+        <div class="container text-center text-md-start">
+        <div class="row d-flex justify-content-center m-0">
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+        <h6 class="text-uppercase fw-bold">Paginas</h6>
+            <p>
+                <a href="../index.html" class="text-white">Inicio</a>
+            </p>
+            <p>
+                <a href="../paginas/quienes-somos.html" class="text-white">Quienes Somos</a>
+            </p>
+            <p>
+                <a href="../paginas/galeria.html" class="text-white">Galeria</a>
+            </p>
+            <p>
+                <a href="../paginas/formato.html" class="text-white">Formato</a>
+            </p>
+            <p>
+                <a href="../paginas/contacto.html" class="text-white">Contacto</a>
+            </p>
         </div>
-    </div>
-    </div>
-    </div>
-    </section>
+        <div class="col-md-2 col-md-4 col-xl-2 mx-auto mt-3">
+        <h6 class="text-uppercase fw-bold">Contacto</h6>
+            <p><i class="fas fa-home mr-3"></i> Yerba Buena, Tucuman, AR</p>
+            <p><i class="fas fa-home mr-3 pp"></i> Torneofutbol@gmail.com</p>
+            <p><i class="fas fa-home mr-3"></i> + 01 234 567 88 </p>
+            <p><i class="fas fa-home mr-3"></i> + 01 234 567 99</p>
+        </div>
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+        <h6 class="text-uppercase fw-bold">Redes</h6>
+        <!-- footer logos -->
+            <div class="d-flex flex-column footer__indice">
+                <img class="footer__logos" src="../imagenes/facebook.png" alt="imagen-facebook">
+                <img class="footer__logos" src="../imagenes/instagram.png" alt="imagen-instagram">
+                <img class="footer__logos" src="../imagenes/gorjeo.png" alt="imagen-twitter">
+            </div>
+        </div>
+        </div>
+        </div>
+        </section>
     </footer>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
